gitops-apps/monitoring/prometheus/istio-ingress/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: virtualservice
  namespace: monitoring
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /prometheus
      route:
        - destination:
            host: prometheus-community-server
            port:
              number: 80
